--- a/export.html
+++ b/export.html
@@ -22,7 +22,6 @@
   <style>
     /* Solo estética específica Export (mantiene funcionalidad) */
 
-    /* Cards de entrada: se apoya en .entry-row del CSS global, aquí solo afinamos */
     .entry-meta {
       font-size: 12px;
       color: var(--text-muted);
@@ -30,6 +29,16 @@
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
+    }
+
+    /* ✅ FIX: alinear importe + borrar (sin tocar JS) */
+    .entry-actions{
+      display:flex;
+      flex-direction:column;
+      align-items:flex-end;
+      gap:8px;
+      margin-left:8px;
+      flex: 0 0 auto;
     }
 
     /* Botón borrar en móvil: más grande y fácil */
@@ -40,7 +49,6 @@
       font-weight: 800;
     }
 
-    /* “Pills” más visibles en móvil */
     .totals-wrap{
       display:flex;
       gap:10px;
@@ -55,7 +63,6 @@
       justify-content: space-between;
     }
 
-    /* Forzar lectura cómoda */
     #entriesList{
       max-height: 360px;
       overflow: auto;
@@ -249,7 +256,6 @@
     if (el) el.textContent = msg || '';
   }
 
-  // Mes actual por defecto
   (function initMonth(){
     const m = $('monthInput');
     if (!m) return;
@@ -487,9 +493,6 @@
 
   /* =================== EXPORT EXCEL GASTOS (2N TEMPLATE) ===================
      REQUISITO: archivos exportados en INGLÉS -> filename/hojas/columnas.
-     Nota: la plantilla 2N ya tiene cabeceras propias; aquí aseguramos:
-     - filename en inglés
-     - hoja final se mantiene como la de plantilla (no cambiamos estructura)
   ========================================================================== */
   async function exportExcelGastos(){
     if (!currentEntries.length){
@@ -516,7 +519,6 @@
         ws[ref].t = 's';
       }
 
-      // Mantiene mapeo de tu plantilla
       setHeaderCell('B2', NOM);
       setHeaderCell('B3', PRENOM);
       setHeaderCell('D3', COST_CENTER);
@@ -541,11 +543,9 @@
           }
         }
 
-        // Date in one cell (A) dd/mm/yyyy
         const dateText = dd + '/' + mm + '/' + yyyy;
         setCell('A', dateText);
 
-        // Provider/Client in B (append notes)
         let bVal = (e.provider || '');
         if (e.notes){
           const base = (e.provider || '').trim();
@@ -553,11 +553,10 @@
         }
         setCell('B', bVal);
 
-        // Amount by category (template columns)
         const amount = Number(e.amount || 0);
         const cat = (e.category || '').toLowerCase();
 
-        let colAmount = 'J'; // VARIOUS default
+        let colAmount = 'J';
         if (cat === 'peajes') colAmount = 'C';
         else if (cat === 'alojamiento') colAmount = 'D';
         else if (cat === 'gasolina') colAmount = 'E';
@@ -566,7 +565,7 @@
         else colAmount = 'J';
 
         setCell(colAmount, amount);
-        setCell('K', amount); // line total
+        setCell('K', amount);
       });
 
       const month = $('monthInput').value || '';
@@ -666,7 +665,6 @@
     }
   }
 
-  // Eventos
   if ($('monthInput')){
     $('monthInput').addEventListener('change', refreshAll);
   }
@@ -684,7 +682,6 @@
   document.addEventListener('entries-updated', refreshAll, false);
   document.addEventListener('kms-updated', refreshAll, false);
 
-  // Primera carga
   refreshAll();
 })();
 </script>
