--- a/export.html
+++ b/export.html
@@ -491,9 +491,6 @@
     }
   }
 
-  /* =================== EXPORT EXCEL GASTOS (2N TEMPLATE) ===================
-     REQUISITO: archivos exportados en INGLÉS -> filename/hojas/columnas.
-  ========================================================================== */
   async function exportExcelGastos(){
     if (!currentEntries.length){
       alert('No hay gastos en este mes.');
@@ -580,7 +577,6 @@
     }
   }
 
-  /* =================== EXPORT EXCEL PERSONAL MILEAGE (ENGLISH) =================== */
   async function exportExcelKmPersonal(){
     const kmsPer = currentKms.filter(k =>
       (k.type || '').toLowerCase().includes('per')
@@ -628,7 +624,7 @@
     }
   }
 
-  /* =================== DOWNLOAD TICKET PHOTOS (ENGLISH FILE NAMES) =================== */
+  /* =================== DOWNLOAD TICKET PHOTOS (FORCE DOWNLOAD) =================== */
   async function exportFotosTickets(){
     const entriesWithPhoto = currentEntries.filter(e => e.photoURL);
     if (!entriesWithPhoto.length){
@@ -637,30 +633,51 @@
     }
 
     try{
-      setStatus('Lanzando descargas de fotos…');
+      setStatus('Descargando fotos… (una a una)');
 
-      entriesWithPhoto.forEach((e, i)=>{
+      // secuencial -> menos bloqueos del navegador y menos picos de memoria
+      for (let i = 0; i < entriesWithPhoto.length; i++){
+        const e = entriesWithPhoto[i];
         const url = e.photoURL;
-        if (!url) return;
+        if (!url) continue;
 
         const d = e.dateJs instanceof Date ? e.dateJs : new Date(e.dateJs || e.date);
         const iso = d.toISOString().slice(0,10);
 
         const safeProv = (e.provider || 'ticket').replace(/[^a-z0-9-_]/gi,'_').toLowerCase();
-        const fname = 'ticket_' + iso + '_' + safeProv + '_' + i + '.jpg'; // ENGLISH-ish
 
+        // intenta respetar extensión por content-type
+        const resp = await fetch(url, { mode:'cors' });
+        if (!resp.ok){
+          throw new Error('No se pudo descargar una foto (HTTP ' + resp.status + ')');
+        }
+        const blob = await resp.blob();
+        const ct = (blob && blob.type) ? blob.type.toLowerCase() : '';
+        let ext = 'jpg';
+        if (ct.includes('png')) ext = 'png';
+        else if (ct.includes('webp')) ext = 'webp';
+        else if (ct.includes('heic') || ct.includes('heif')) ext = 'heic';
+
+        const fname = 'ticket_' + iso + '_' + safeProv + '_' + i + '.' + ext;
+
+        const objUrl = URL.createObjectURL(blob);
         const a = document.createElement('a');
-        a.href = url;
+        a.href = objUrl;
         a.download = fname;
         document.body.appendChild(a);
         a.click();
         document.body.removeChild(a);
-      });
 
-      setStatus('Descarga de fotos lanzada ✅ (el navegador puede pedir confirmación).');
+        // liberar memoria
+        setTimeout(function(){ URL.revokeObjectURL(objUrl); }, 2000);
+
+        setStatus('Descargando fotos… ' + (i+1) + '/' + entriesWithPhoto.length);
+      }
+
+      setStatus('Descarga de fotos completada ✅');
     }catch(e){
       console.error(e);
-      alert('Error al lanzar la descarga de fotos: ' + (e && e.message || ''));
+      alert('Error al descargar fotos: ' + (e && (e.message || e)));
       setStatus('Error al descargar fotos.');
     }
   }
