--- a/export.html
+++ b/export.html
@@ -624,49 +624,53 @@
     }
   }
 
-  /* =================== DOWNLOAD TICKET PHOTOS (FORCE DOWNLOAD) =================== */
-async function exportFotosTickets(){
-  const entriesWithPhoto = currentEntries.filter(e => e.photoURL);
-  if (!entriesWithPhoto.length){
-    alert('No hay tickets con foto en este mes.');
-    return;
+  /* =================== DOWNLOAD TICKET PHOTOS (STRICT MIN FIX) =================== */
+  async function exportFotosTickets(){
+    const entriesWithPhoto = currentEntries.filter(e => e.photoURL);
+    if (!entriesWithPhoto.length){
+      alert('No hay tickets con foto en este mes.');
+      return;
+    }
+
+    try{
+      setStatus('Descargando fotos… 0/' + entriesWithPhoto.length);
+
+      for (let i = 0; i < entriesWithPhoto.length; i++){
+        const e = entriesWithPhoto[i];
+        const url = e.photoURL;
+        if (!url) continue;
+
+        const d = e.dateJs instanceof Date ? e.dateJs : new Date(e.dateJs || e.date);
+        const iso = d.toISOString().slice(0,10);
+        const safeProv = (e.provider || 'ticket').replace(/[^a-z0-9-_]/gi,'_').toLowerCase();
+        const fname = 'ticket_' + iso + '_' + safeProv + '_' + i + '.jpg';
+
+        const disp = 'attachment; filename="' + fname + '"';
+        const sep  = url.indexOf('?') >= 0 ? '&' : '?';
+        const forcedUrl = url + sep + 'response-content-disposition=' + encodeURIComponent(disp);
+
+        const a = document.createElement('a');
+        a.href = forcedUrl;
+        a.download = fname;
+        a.target = '_blank';                 // ✅ reduce bloqueos en Chrome
+        a.rel = 'noopener noreferrer';
+        document.body.appendChild(a);
+        a.click();
+        document.body.removeChild(a);
+
+        setStatus('Descargando fotos… ' + (i+1) + '/' + entriesWithPhoto.length);
+
+        // ✅ delay para evitar que Chrome lo trate como “spam”
+        await new Promise(r => setTimeout(r, 900));
+      }
+
+      setStatus('Descarga lanzada ✅ (si Chrome bloquea, permite "Descargas múltiples" para este sitio).');
+    }catch(e){
+      console.error(e);
+      alert('Error al descargar fotos: ' + (e && (e.message || e)));
+      setStatus('Error al descargar fotos.');
+    }
   }
-
-  try{
-    setStatus('Lanzando descargas de fotos…');
-
-    entriesWithPhoto.forEach((e, i)=>{
-      const url = e.photoURL;
-      if (!url) return;
-
-      const d = e.dateJs instanceof Date ? e.dateJs : new Date(e.dateJs || e.date);
-      const iso = d.toISOString().slice(0,10);
-
-      const safeProv = (e.provider || 'ticket').replace(/[^a-z0-9-_]/gi,'_').toLowerCase();
-
-      // nombre: usa extensión "jpg" por defecto (si quieres, luego lo mejoramos con photoPath)
-      const fname = 'ticket_' + iso + '_' + safeProv + '_' + i + '.jpg';
-
-      // 🔥 fuerza "attachment" en Firebase Storage (GCS)
-      const disp = 'attachment; filename="' + fname + '"';
-      const sep  = url.indexOf('?') >= 0 ? '&' : '?';
-      const forcedUrl = url + sep + 'response-content-disposition=' + encodeURIComponent(disp);
-
-      const a = document.createElement('a');
-      a.href = forcedUrl;
-      a.download = fname; // ayuda, aunque lo fuerte es response-content-disposition
-      document.body.appendChild(a);
-      a.click();
-      document.body.removeChild(a);
-    });
-
-    setStatus('Descarga lanzada ✅ (el navegador puede pedir confirmación).');
-  }catch(e){
-    console.error(e);
-    alert('Error al descargar fotos: ' + (e && (e.message || e)));
-    setStatus('Error al descargar fotos.');
-  }
-}
 
   if ($('monthInput')){
     $('monthInput').addEventListener('change', refreshAll);
